docs/apache-airflow-providers-cncf-kubernetes/7.10.0/_sources/_api/airflow/providers/cncf/kubernetes/operators/resource/index.rst.txt
:py:mod:`airflow.providers.cncf.kubernetes.operators.resource`
==============================================================

.. py:module:: airflow.providers.cncf.kubernetes.operators.resource

.. autoapi-nested-parse::

   Manage a Kubernetes Resource.



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.cncf.kubernetes.operators.resource.KubernetesCreateResourceOperator
   airflow.providers.cncf.kubernetes.operators.resource.KubernetesDeleteResourceOperator




.. py:class:: KubernetesCreateResourceOperator(*, yaml_conf, namespace = None, kubernetes_conn_id = KubernetesHook.default_conn_name, custom_resource_definition = False, **kwargs)


   Bases: :py:obj:`KubernetesResourceBaseOperator`

   Create a resource in a kubernetes.

   .. py:method:: create_custom_from_yaml_object(body)


   .. py:method:: execute(context)

      Derive when creating an operator.

      Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: KubernetesDeleteResourceOperator(*, yaml_conf, namespace = None, kubernetes_conn_id = KubernetesHook.default_conn_name, custom_resource_definition = False, **kwargs)


   Bases: :py:obj:`KubernetesResourceBaseOperator`

   Delete a resource in a kubernetes.

   .. py:method:: delete_custom_from_yaml_object(body)


   .. py:method:: execute(context)

      Derive when creating an operator.

      Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.



